--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1"
   }
