--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.32.1"
   }
 }
