--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
+    "paypal-rest-sdk": "^1.8.1",
     "sequelize": "^6.32.1"
   }
 }
